--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
 		"postinstall": "npm run build"
 	},
 	"dependencies": {
+		"argon2": "^0.31.0",
 		"axios": "^1.4.0",
 		"cloudinary": "^1.39.0",
 		"cookie-parser": "^1.4.6",
@@ -25,10 +26,12 @@
 		"express": "^4.18.2",
 		"http-status": "^1.6.2",
 		"joi": "^17.9.2",
+		"jsonwebtoken": "^9.0.1",
 		"mongoose": "^7.4.1",
 		"multer": "^1.4.5-lts.1",
 		"socket.io": "^4.7.0",
-		"twilio": "^4.12.0"
+		"twilio": "^4.12.0",
+		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.17",
