--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,6 +10,7 @@
 		"skipLibCheck": true,
 		"removeComments": true,
 		"forceConsistentCasingInFileNames": true,
+		"allowSyntheticDefaultImports": true, /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
 	},
 	"include": [
 		"src/**/*"
