Add gateway base and basic Spotify flow

--- a/server/.env.example
+++ b/server/.env.example
@@ -12,5 +12,10 @@ CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 
+# Spotify credentials in order to use the Spotify API.
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
+SPOTIFY_REDIRECT_URI=
+
 # The secret key used to sign and validate JWT tokens.
 JWT_SECRET_KEY=
