--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,8 @@
 		"jsonwebtoken": "^9.0.1",
 		"mongoose": "^7.4.1",
 		"multer": "^1.4.5-lts.1",
-		"socket.io": "^4.7.0",
+		"socket.io": "^4.7.2",
+		"spotify-web-api-node": "^5.0.2",
 		"twilio": "^4.12.0",
 		"uuid": "^9.0.0"
 	},
