--- a/server/package.json
+++ b/server/package.json
@@ -18,34 +18,34 @@
 	"dependencies": {
 		"argon2": "^0.31.0",
 		"axios": "^1.4.0",
-		"cloudinary": "^1.39.0",
+		"cloudinary": "^1.40.0",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"datauri": "^4.1.0",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
+		"express-session": "^1.17.3",
 		"http-status": "^1.6.2",
 		"joi": "^17.9.2",
 		"jsonwebtoken": "^9.0.1",
-		"mongoose": "^7.4.1",
+		"mongoose": "^7.4.3",
 		"multer": "^1.4.5-lts.1",
 		"socket.io": "^4.7.2",
 		"spotify-web-api-node": "^5.0.2",
-		"twilio": "^4.12.0",
 		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.17",
-		"@types/node": "^20.3.1",
-		"eslint": "^8.43.0",
-		"eslint-config-prettier": "^8.8.0",
-		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-prettier": "^4.2.1",
+		"@types/node": "^20.5.1",
+		"eslint": "^8.47.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-import": "^2.28.1",
+		"eslint-plugin-prettier": "^5.0.0",
 		"eslint-plugin-security": "^1.7.1",
 		"nodemon": "^3.0.1",
-		"prettier": "^2.8.8",
+		"prettier": "^3.0.2",
 		"ts-node": "^10.9.1",
-		"typescript": "^5.1.3",
-		"typescript-cp": "^0.1.8"
+		"typescript": "^5.1.6",
+		"typescript-cp": "^0.1.9"
 	}
 }
