Begin implementing UI

--- a/server/.env.example
+++ b/server/.env.example
@@ -17,5 +17,8 @@ SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
 SPOTIFY_REDIRECT_URI=
 
+# Session Secret used for Express-Session
+SESSION_SECRET=
+
 # The secret key used to sign and validate JWT tokens.
 JWT_SECRET_KEY=
