--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,14 @@
 		"@fortawesome/vue-fontawesome": "^3.0.3",
 		"@yeger/vue-masonry-wall": "^4.1.0",
 		"axios": "^1.4.0",
+		"http-status": "^1.6.2",
+		"notiwind": "^2.0.2",
+		"pinia": "^2.1.6",
 		"prettier": "^3.0.0",
+		"vee-validate": "^4.11.3",
 		"vue": "^3.3.4",
-		"vue-router": "^4.2.4"
+		"vue-router": "^4.2.4",
+		"yup": "^1.2.0"
 	},
 	"devDependencies": {
 		"@types/node": "^20.4.2",
